--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,11 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="default_text_size_extra_small">14sp</dimen>
+    <dimen name="default_text_size_small">16sp</dimen>
+    <dimen name="default_text_size">18sp</dimen>
+    <dimen name="default_text_size_large">20sp</dimen>
+    <dimen name="default_text_size_extra_large">22sp</dimen>
 </resources>
