--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#009491</color>
+    <color name="colorPrimaryDark">#00837e</color>
+    <color name="colorAccent">#f45145</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="dark_gray">#222222</color>
+    <color name="alpha_dark_gray">#DD222222</color>
 </resources>
