--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,6 +25,20 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="RippleEffect">
+        <item name="mrl_rippleAlpha">0.1</item>
+        <item name="mrl_rippleColor">@color/dark_gray</item>
+        <item name="mrl_rippleOverlay">true</item>
+    </style>
+
+    <style name="DraggerTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@color/transparent</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+        <item name="android:windowAnimationStyle">@null</item>
+    </style>
+
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
