--- a/app/src/main/res/layout/view_feed_item.xml
+++ b/app/src/main/res/layout/view_feed_item.xml
@@ -7,32 +7,69 @@
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
     android:layout_marginTop="5dp"
-    app:cardBackgroundColor="@color/white">
+    app:cardBackgroundColor="@color/white"
+    app:cardPreventCornerOverlap="true">
 
-    <FrameLayout
+    <com.balysv.materialripple.MaterialRippleLayout
+        android:id="@+id/mrl_feed_button"
+        style="@style/RippleEffect"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="3dp">
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/iv_feed_title"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="190dp"
-            android:contentDescription="@null"
-            android:scaleType="centerCrop"
-            android:src="@mipmap/ic_launcher" />
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_feed_title"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:alpha="0"
-            android:background="@color/alpha_dark_gray"
-            android:gravity="center"
-            android:padding="20dp"
-            android:text="Sample"
-            android:textColor="@color/white"
-            android:textSize="@dimen/default_text_size_small" />
+            <ImageView
+                android:id="@+id/iv_feed_title"
+                android:layout_width="match_parent"
+                android:layout_height="190dp"
+                android:background="@null"
+                android:contentDescription="@null"
+                android:scaleType="centerCrop"
+                android:src="@mipmap/ic_launcher" />
 
-    </FrameLayout>
+            <TextView
+                android:id="@+id/tv_feed_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:paddingBottom="10dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="20dp"
+                android:text="Sample"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="@dimen/default_text_size_extra_small" />
+
+            <TextView
+                android:id="@+id/tv_feed_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:text="Sample"
+                android:textColor="@color/dark_gray"
+                android:textSize="@dimen/default_text_size_small" />
+
+            <TextView
+                android:id="@+id/tv_feed_published_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:gravity="right"
+                android:paddingBottom="10dp"
+                android:paddingEnd="10dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="10dp"
+                android:paddingStart="20dp"
+                android:paddingTop="20dp"
+                android:text="Sample"
+                android:textColor="@color/light_gray"
+                android:textSize="@dimen/default_text_size_extra_small" />
+        </LinearLayout>
+    </com.balysv.materialripple.MaterialRippleLayout>
 </android.support.v7.widget.CardView>
