--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,14 @@
     <color name="colorPrimary">#009491</color>
     <color name="colorPrimaryDark">#00837e</color>
     <color name="colorAccent">#f45145</color>
+    <color name="transparent">#00000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="alpha_white">#70FFFFFF</color>
     <color name="black">#000000</color>
+    <color name="alpha_gray">#70555555</color>
     <color name="dark_gray">#222222</color>
+    <color name="gray">#555555</color>
+    <color name="light_gray">#999999</color>
+    <color name="extra_light_gray">#DDDDDD</color>
     <color name="alpha_dark_gray">#DD222222</color>
 </resources>
