--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,11 +10,9 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="DraggerTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="DraggerTheme" parent="AppTheme">
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@color/transparent</item>
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
         <item name="android:windowAnimationStyle">@null</item>
     </style>
 
