--- a/app/src/main/res/layout/view_post_content_code.xml
+++ b/app/src/main/res/layout/view_post_content_code.xml
@@ -24,6 +24,7 @@
             android:layout_height="wrap_content"
             android:scrollHorizontally="true"
             android:textColor="@color/text_body"
+            android:textIsSelectable="true"
             android:textSize="@dimen/default_text_size_extra_small" />
     </HorizontalScrollView>
 </android.support.v7.widget.CardView>
