--- a/app/src/main/res/layout/view_post_content_header.xml
+++ b/app/src/main/res/layout/view_post_content_header.xml
@@ -6,5 +6,6 @@
     android:paddingBottom="5dp"
     android:paddingTop="20dp"
     android:textColor="@color/text_header"
+    android:textIsSelectable="true"
     android:textSize="@dimen/default_text_size"
     android:textStyle="bold" />
