--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
 
     <color name="text_header">#3D85C6</color>
     <color name="text_body">#383838</color>
+    <color name="text_link">#ED6400</color>
 </resources>
