--- a/app/src/main/res/drawable/vector_ic_menu.xml
+++ b/app/src/main/res/drawable/vector_ic_menu.xml
@@ -5,9 +5,9 @@
     android:viewportHeight="24"
     android:viewportWidth="24">
     <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z" />
-    <path
         android:fillColor="#00FFFFFF"
-        android:pathData="M0-.5h24v24H0z" />
+        android:pathData="M0 0h24v24H0z" />
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z" />
 </vector>
