--- a/app/src/main/res/drawable/vector_ic_order.xml
+++ b/app/src/main/res/drawable/vector_ic_order.xml
@@ -6,8 +6,8 @@
     android:viewportWidth="24">
     <path
         android:fillColor="#FFFFFF"
-        android:pathData="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z" />
+        android:pathData="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z" />
     <path
         android:fillColor="#00FFFFFF"
-        android:pathData="M0-.5h24v24H0z" />
+        android:pathData="M0 0h24v24H0z" />
 </vector>
