--- a/app/src/main/res/drawable/vector_ic_search.xml
+++ b/app/src/main/res/drawable/vector_ic_search.xml
@@ -6,8 +6,8 @@
     android:viewportWidth="24">
     <path
         android:fillColor="#FFFFFF"
-        android:pathData="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z" />
+        android:pathData="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z" />
     <path
         android:fillColor="#00FFFFFF"
-        android:pathData="M0-.5h24v24H0z" />
+        android:pathData="M0 0h24v24H0z" />
 </vector>
