--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,9 @@
     <color name="white">#FFFFFF</color>
     <color name="alpha_white">#70FFFFFF</color>
     <color name="black">#000000</color>
-    <color name="alpha_black">#D0000000</color>
+    <color name="dark_alpha_black">#E0000000</color>
+    <color name="alpha_black">#A0000000</color>
+    <color name="light_alpha_black">#80000000</color>
     <color name="gray">#555555</color>
     <color name="alpha_gray">#70555555</color>
     <color name="dark_gray">#222222</color>
