--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,105 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.flipboard.bottomsheet.BottomSheetLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/bsl_order_menu"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     tools:context="com.akexorcist.sleepingforless.view.feed.MainActivity">
 
-    <android.support.design.widget.AppBarLayout
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="190dp"
-        android:fitsSystemWindows="true"
-        android:theme="@style/AppTheme.AppBarOverlay"
-        app:elevation="5dp">
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true">
 
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/ctl_title"
+        <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:collapsedTitleGravity="center"
-            app:collapsedTitleTextAppearance="@style/CollapsedTitleTextView"
-            app:expandedTitleGravity="center_horizontal|bottom"
-            app:expandedTitleTextAppearance="@style/ExpandedTitleTextView"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            android:layout_height="190dp"
+            android:fitsSystemWindows="true"
+            android:theme="@style/AppTheme.AppBarOverlay"
+            app:elevation="5dp">
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/tb_title"
+            <android.support.design.widget.CollapsingToolbarLayout
+                android:id="@+id/ctl_title"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:contentInsetEnd="0dp"
-                app:contentInsetLeft="0dp"
-                app:contentInsetRight="0dp"
-                app:contentInsetStart="0dp"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
+                android:layout_height="match_parent"
+                app:collapsedTitleGravity="center"
+                app:collapsedTitleTextAppearance="@style/CollapsedTitleTextView"
+                app:expandedTitleGravity="center_horizontal|bottom"
+                app:expandedTitleTextAppearance="@style/ExpandedTitleTextView"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="30dp"
-                android:contentDescription="@null"
-                android:src="@mipmap/ic_launcher" />
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/tb_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:background="?attr/colorPrimary"
+                    app:contentInsetEnd="0dp"
+                    app:contentInsetLeft="0dp"
+                    app:contentInsetRight="0dp"
+                    app:contentInsetStart="0dp"
+                    app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-        </android.support.design.widget.CollapsingToolbarLayout>
-    </android.support.design.widget.AppBarLayout>
+                <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="30dp"
+                    android:contentDescription="@null"
+                    android:src="@mipmap/ic_launcher" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_feed_list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="false"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+            </android.support.design.widget.CollapsingToolbarLayout>
+        </android.support.design.widget.AppBarLayout>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_menu"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_gravity="bottom|center_horizontal"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/vector_ic_menu"
-        app:layout_behavior="com.akexorcist.sleepingforless.widget.FloatingActionButtonBehavior" />
-
-    <View
-        android:id="@+id/view_content_shadow"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/light_alpha_black" />
-
-    <com.bowyer.app.fabtransitionlayout.FooterLayout
-        android:id="@+id/fl_menu"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        app:ft_color="@color/colorAccent">
-
-        <LinearLayout
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_feed_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="horizontal">
+            android:fillViewport="false"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-            <com.inthecheesefactory.thecheeselibrary.widget.AdjustableImageView
-                android:id="@+id/iv_menu_search"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:adjustViewBounds="true"
-                android:padding="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                android:src="@drawable/vector_ic_search" />
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_menu"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_gravity="bottom|center_horizontal"
+            android:layout_margin="@dimen/fab_margin"
+            app:layout_behavior="com.akexorcist.sleepingforless.widget.FloatingActionButtonBehavior"
+            app:srcCompat="@drawable/vector_ic_menu" />
 
-            <com.inthecheesefactory.thecheeselibrary.widget.AdjustableImageView
-                android:id="@+id/iv_menu_order"
-                android:layout_width="wrap_content"
+        <View
+            android:id="@+id/view_content_shadow"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/light_alpha_black" />
+
+        <com.bowyer.app.fabtransitionlayout.FooterLayout
+            android:id="@+id/fl_menu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            app:ft_color="@color/colorAccent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:adjustViewBounds="true"
-                android:padding="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                android:src="@drawable/vector_ic_order" />
-        </LinearLayout>
-    </com.bowyer.app.fabtransitionlayout.FooterLayout>
-</android.support.design.widget.CoordinatorLayout>
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/iv_menu_search"
+                    android:layout_width="60dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:adjustViewBounds="true"
+                    android:contentDescription="@null"
+                    android:padding="10dp"
+                    android:scaleType="fitCenter"
+                    app:srcCompat="@drawable/vector_ic_search" />
+
+                <ImageView
+                    android:id="@+id/iv_menu_order"
+                    android:layout_width="60dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:adjustViewBounds="true"
+                    android:contentDescription="@null"
+                    android:padding="10dp"
+                    android:scaleType="fitCenter"
+                    app:srcCompat="@drawable/vector_ic_order" />
+
+                <ImageView
+                    android:id="@+id/iv_menu_settings"
+                    android:layout_width="60dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:adjustViewBounds="true"
+                    android:contentDescription="@null"
+                    android:padding="10dp"
+                    android:scaleType="fitCenter"
+                    app:srcCompat="@drawable/vector_ic_settings" />
+            </LinearLayout>
+        </com.bowyer.app.fabtransitionlayout.FooterLayout>
+    </android.support.design.widget.CoordinatorLayout>
+</com.flipboard.bottomsheet.BottomSheetLayout>
