--- a/app/src/main/res/layout/activity_post_reader.xml
+++ b/app/src/main/res/layout/activity_post_reader.xml
@@ -49,11 +49,11 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_search"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_gravity="bottom|center_horizontal"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email"
+        android:src="@drawable/vector_ic_menu"
         app:layout_behavior="com.akexorcist.sleepingforless.widget.FloatingActionButtonBehavior" />
 
 </android.support.design.widget.CoordinatorLayout>
