Update code view

--- a/app/src/main/res/layout/view_post_content_code.xml
+++ b/app/src/main/res/layout/view_post_content_code.xml
@@ -12,10 +12,11 @@
     <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="10dp"
+        android:paddingBottom="20dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:paddingTop="10dp"
+        android:paddingTop="20dp"
+        android:scrollbarStyle="outsideOverlay"
         android:scrollbars="horizontal">
 
         <TextView
