--- a/app/src/main/res/layout/view_post_content_code.xml
+++ b/app/src/main/res/layout/view_post_content_code.xml
@@ -21,6 +21,7 @@
 
         <TextView
             android:id="@+id/tv_post_content_code"
+            fontPath="fonts/DroidSansMono.ttf"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:scrollHorizontally="true"
