--- a/app/src/main/res/layout/view_post_content_plain_text.xml
+++ b/app/src/main/res/layout/view_post_content_plain_text.xml
@@ -3,6 +3,8 @@
     android:id="@+id/tv_post_content_plain_text"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
     android:paddingBottom="5dp"
     android:paddingTop="5dp"
     android:textColor="@color/text_body"
