--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -88,11 +88,29 @@
                 android:orientation="horizontal">
 
                 <com.akexorcist.sleepingforless.widget.MenuButton
+                    android:id="@+id/btn_menu_bookmark"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
+                    app:mbIconSrc="@drawable/vector_ic_bookmark_menu"
+                    app:mbText="Bookmark" />
+
+                <com.akexorcist.sleepingforless.widget.MenuButton
+                    android:id="@+id/btn_menu_offline_article"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
+                    app:mbIconSrc="@drawable/vector_ic_offline_content"
+                    app:mbText="Offline" />
+
+                <com.akexorcist.sleepingforless.widget.MenuButton
                     android:id="@+id/btn_menu_search"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
                     app:mbIconSrc="@drawable/vector_ic_search"
                     app:mbText="Search" />
 
@@ -100,8 +118,8 @@
                     android:id="@+id/btn_menu_sort"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
                     app:mbIconSrc="@drawable/vector_ic_sort"
                     app:mbText="Sort" />
 
@@ -109,8 +127,8 @@
                     android:id="@+id/btn_menu_settings"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
                     app:mbIconSrc="@drawable/vector_ic_settings"
                     app:mbText="Settings" />
             </LinearLayout>
