--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.flipboard.bottomsheet.BottomSheetLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/bsl_menu"
     android:layout_width="match_parent"
@@ -12,126 +11,11 @@
         android:layout_height="match_parent"
         android:fitsSystemWindows="true">
 
-        <android.support.design.widget.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="190dp"
-            android:fitsSystemWindows="true"
-            android:theme="@style/AppTheme.AppBarOverlay"
-            app:elevation="5dp">
+        <include layout="@layout/view_include_main_title" />
 
-            <android.support.design.widget.CollapsingToolbarLayout
-                android:id="@+id/ctl_title"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:collapsedTitleGravity="center"
-                app:collapsedTitleTextAppearance="@style/CollapsedTitleTextView"
-                app:expandedTitleGravity="center_horizontal|bottom"
-                app:expandedTitleTextAppearance="@style/ExpandedTitleTextView"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed">
+        <include layout="@layout/view_include_main_content" />
 
-                <android.support.v7.widget.Toolbar
-                    android:id="@+id/tb_title"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:background="?attr/colorPrimary"
-                    app:contentInsetEnd="0dp"
-                    app:contentInsetLeft="0dp"
-                    app:contentInsetRight="0dp"
-                    app:contentInsetStart="0dp"
-                    app:popupTheme="@style/AppTheme.PopupOverlay" />
+        <include layout="@layout/view_include_main_menu" />
 
-                <ImageView
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="30dp"
-                    android:contentDescription="@null"
-                    android:src="@mipmap/ic_sfl_logo" />
-
-            </android.support.design.widget.CollapsingToolbarLayout>
-        </android.support.design.widget.AppBarLayout>
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_feed_list"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/extra_extra_light_gray"
-            android:fillViewport="false"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab_menu"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_gravity="bottom|center_horizontal"
-            android:layout_margin="@dimen/fab_margin"
-            app:layout_behavior="com.akexorcist.sleepingforless.widget.FloatingActionButtonBehavior"
-            app:srcCompat="@drawable/vector_ic_menu" />
-
-        <View
-            android:id="@+id/view_content_shadow"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/light_alpha_black" />
-
-        <com.bowyer.app.fabtransitionlayout.FooterLayout
-            android:id="@+id/fl_menu"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            app:ft_color="@color/colorAccent">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <com.akexorcist.sleepingforless.widget.MenuButton
-                    android:id="@+id/btn_menu_bookmark"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="15dp"
-                    app:mbIconSrc="@drawable/vector_ic_bookmark_menu"
-                    app:mbText="Bookmark" />
-
-                <com.akexorcist.sleepingforless.widget.MenuButton
-                    android:id="@+id/btn_menu_offline_article"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="15dp"
-                    app:mbIconSrc="@drawable/vector_ic_offline_content"
-                    app:mbText="Offline" />
-
-                <com.akexorcist.sleepingforless.widget.MenuButton
-                    android:id="@+id/btn_menu_search"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="15dp"
-                    app:mbIconSrc="@drawable/vector_ic_search"
-                    app:mbText="Search" />
-
-                <com.akexorcist.sleepingforless.widget.MenuButton
-                    android:id="@+id/btn_menu_sort"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="15dp"
-                    app:mbIconSrc="@drawable/vector_ic_sort"
-                    app:mbText="Sort" />
-
-                <com.akexorcist.sleepingforless.widget.MenuButton
-                    android:id="@+id/btn_menu_settings"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginRight="15dp"
-                    app:mbIconSrc="@drawable/vector_ic_settings"
-                    app:mbText="Settings" />
-            </LinearLayout>
-        </com.bowyer.app.fabtransitionlayout.FooterLayout>
     </android.support.design.widget.CoordinatorLayout>
 </com.flipboard.bottomsheet.BottomSheetLayout>
