--- a/app/src/main/res/layout/activity_search_result.xml
+++ b/app/src/main/res/layout/activity_search_result.xml
@@ -1,91 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context="com.akexorcist.sleepingforless.view.search.SearchResultActivity">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay"
-        app:elevation="5dp">
+    <include layout="@layout/view_include_search_result_title" />
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/tb_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary"
-            android:minHeight="?attr/actionBarSize"
-            app:contentInsetEnd="0dp"
-            app:contentInsetLeft="0dp"
-            app:contentInsetRight="0dp"
-            app:contentInsetStart="0dp"
-            app:popupTheme="@style/AppTheme.PopupOverlay"
-            app:titleTextAppearance="@style/PostTitleTextView" />
-    </android.support.design.widget.AppBarLayout>
+    <include layout="@layout/view_include_search_result_content" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_search_result_list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/extra_extra_light_gray"
-        android:fillViewport="false"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+    <include layout="@layout/view_include_search_result_menu" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_menu"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_gravity="bottom|center_horizontal"
-        android:layout_margin="@dimen/fab_margin"
-        app:layout_behavior="com.akexorcist.sleepingforless.widget.FloatingActionButtonBehavior"
-        app:srcCompat="@drawable/vector_ic_menu" />
-
-    <View
-        android:id="@+id/view_content_shadow"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/light_alpha_black" />
-
-    <com.bowyer.app.fabtransitionlayout.FooterLayout
-        android:id="@+id/fl_menu"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        app:ft_color="@color/colorAccent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/iv_menu_search"
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:adjustViewBounds="true"
-                android:contentDescription="@null"
-                android:padding="10dp"
-                android:scaleType="fitCenter"
-                app:srcCompat="@drawable/vector_ic_search" />
-
-            <ImageView
-                android:id="@+id/iv_menu_settings"
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:adjustViewBounds="true"
-                android:contentDescription="@null"
-                android:padding="10dp"
-                android:scaleType="fitCenter"
-                app:srcCompat="@drawable/vector_ic_settings" />
-        </LinearLayout>
-    </com.bowyer.app.fabtransitionlayout.FooterLayout>
 </android.support.design.widget.CoordinatorLayout>
