--- a/app/src/main/res/layout/view_feed_item.xml
+++ b/app/src/main/res/layout/view_feed_item.xml
@@ -3,11 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="5dp"
+    android:layout_marginBottom="10dp"
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
-    android:layout_marginTop="5dp"
+    android:layout_marginTop="10dp"
     app:cardBackgroundColor="@color/white"
+    app:cardCornerRadius="0dp"
     app:cardPreventCornerOverlap="true">
 
     <com.balysv.materialripple.MaterialRippleLayout
