Use recycler view in post content Add loading Fix main feed scroll handling

--- a/app/src/main/res/layout/view_include_main_title.xml
+++ b/app/src/main/res/layout/view_include_main_title.xml
@@ -9,7 +9,8 @@
         android:layout_height="190dp"
         android:fitsSystemWindows="true"
         android:theme="@style/AppTheme.AppBarOverlay"
-        app:elevation="5dp">
+        app:elevation="5dp"
+        app:layout_behavior="com.akexorcist.sleepingforless.widget.FlingBehavior">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/ctl_title"
