--- a/app/src/main/res/layout/view_feed_loading.xml
+++ b/app/src/main/res/layout/view_feed_loading.xml
@@ -6,11 +6,12 @@
     android:orientation="vertical"
     android:padding="10dp">
 
-    <TextView
+    <com.zl.reik.dilatingdotsprogressbar.DilatingDotsProgressBar
+        android:id="@+id/pb_post_list_loading"
+        style="@style/DotsProgressBar.Primary"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Loading"
-        android:textColor="@color/dark_gray"
-        android:textSize="@dimen/default_text_size_extra_large" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
