--- a/app/src/main/res/layout/view_post_content_image.xml
+++ b/app/src/main/res/layout/view_post_content_image.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.inthecheesefactory.thecheeselibrary.widget.AdjustableImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/iv_post_content_image"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:adjustViewBounds="true"
-    android:layout_marginBottom="5dp"
-    android:layout_marginTop="5dp" />
+    android:background="@color/white"
+    android:layout_height="wrap_content">
+
+    <com.inthecheesefactory.thecheeselibrary.widget.AdjustableImageView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/iv_post_content_image"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
+        android:adjustViewBounds="true"
+        android:src="@mipmap/ic_launcher" />
+</FrameLayout>
