--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -49,6 +49,23 @@
         <item name="mrl_rippleOverlay">true</item>
     </style>
 
+    <style name="DotsProgressBar">
+        <item name="android:layout_gravity">center</item>
+        <item name="android:radius">4dp</item>
+        <item name="dd_animationDuration">500</item>
+        <item name="dd_horizontalSpacing">10dp</item>
+        <item name="dd_numDots">5</item>
+        <item name="dd_scaleMultiplier">2</item>
+    </style>
+
+    <style name="DotsProgressBar.Primary" parent="DotsProgressBar">
+        <item name="android:color">@color/colorPrimary</item>
+    </style>
+
+    <style name="DotsProgressBar.Accent" parent="DotsProgressBar">
+        <item name="android:color">@color/colorAccent</item>
+    </style>
+
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
