Add loading progress

--- a/app/src/main/res/layout/view_include_search_result_content.xml
+++ b/app/src/main/res/layout/view_include_search_result_content.xml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/rv_search_result_list"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/extra_extra_light_gray"
-    android:fillViewport="false"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <com.zl.reik.dilatingdotsprogressbar.DilatingDotsProgressBar
+        android:id="@+id/pb_search_result_list_loading"
+        style="@style/DotsProgressBar.Primary"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_search_result_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/extra_extra_light_gray"
+        android:fillViewport="false"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+</merge>
