Add refresh button

--- a/app/src/main/res/layout/view_include_main_menu.xml
+++ b/app/src/main/res/layout/view_include_main_menu.xml
@@ -42,6 +42,15 @@
                 app:mbText="Bookmark" />
 
             <com.akexorcist.sleepingforless.widget.MenuButton
+                android:id="@+id/btn_menu_refresh"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                app:mbIconSrc="@drawable/vector_ic_bookmark_menu"
+                app:mbText="Refresh" />
+
+            <com.akexorcist.sleepingforless.widget.MenuButton
                 android:id="@+id/btn_menu_search"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
