--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -66,6 +66,10 @@
         <item name="android:color">@color/colorAccent</item>
     </style>
 
+    <style name="DotsProgressBar.White" parent="DotsProgressBar">
+        <item name="android:color">@color/white</item>
+    </style>
+
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
