--- a/app/src/main/res/layout/view_include_bookmark_menu.xml
+++ b/app/src/main/res/layout/view_include_bookmark_menu.xml
@@ -38,7 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                app:mbIconSrc="@drawable/vector_ic_bookmark_uncheck"
+                app:mbIconSrc="@drawable/vector_ic_update"
                 app:mbText="Update All" />
 
             <com.akexorcist.sleepingforless.widget.MenuButton
@@ -47,7 +47,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                app:mbIconSrc="@drawable/vector_ic_bookmark_uncheck"
+                app:mbIconSrc="@drawable/vector_ic_remove"
                 app:mbText="Remove All" />
 
             <com.akexorcist.sleepingforless.widget.MenuButton
@@ -56,7 +56,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                app:mbIconSrc="@drawable/vector_ic_share"
+                app:mbIconSrc="@drawable/vector_ic_info"
                 app:mbText="Info" />
         </LinearLayout>
     </com.bowyer.app.fabtransitionlayout.FooterLayout>
