Add download for image preview

--- a/app/src/main/res/layout/activity_post_image_preview.xml
+++ b/app/src/main/res/layout/activity_post_image_preview.xml
@@ -13,13 +13,28 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_preview_close"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_gravity="bottom|center_horizontal"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/vector_ic_close" />
+        android:orientation="horizontal">
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_preview_download"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginEnd="@dimen/fab_margin"
+            android:layout_marginRight="@dimen/fab_margin"
+            app:srcCompat="@drawable/vector_ic_download" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_preview_close"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            app:srcCompat="@drawable/vector_ic_close" />
+
+    </LinearLayout>
 </RelativeLayout>
